2019-08-10  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/bl/src/control_tables.c: cosmetics

2019-08-03  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* Makefile: 
	* sources/bl/include/buttons.h: Doxygen comments added 
	* sources/bl/include/control_tables.h: Doxygen comments added 
	* sources/bl/include/led_control.h: Doxygen comments added
	* sources/bl/include/main_cycle.h: Doxygen comments added
	* sources/bl/include/main_outputs.h: Doxygen comments added
	* sources/bl/src/led_control.c (Blink_Led): Doxygen comments added
	* sources/bl/src/main_cycle.c (mainCyclePreRun): moved from main
	* sources/main.c (prestart): moved
	(main): 
2019-06-28  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/hal/src/gpio_exti.c (Exti_Init): Added enabling interrupt
	* sources/hal/src/sleep.c (Sleep_on): Debug added
	* sources/main.c (main): Unstable start fixed
2019-01-11  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/hal/include/gpio.h: Removed.
	* sources/hal/src/gpio.c: Removed.
	* sources/hal/include/gpio_exti.h: Was gpio.h
	* sources/hal/include/sleep.h: New file. Functions for going to sleep mode prototypes
	* sources/hal/src/gpio_exti.c: Was gpio.c
	* sources/hal/src/sleep.c: New file. Functions for going to sleep mode
	* sources/bl/src/control_tables.c: 
	* sources/bl/src/main_outputs.c (Control_Outs): added table switching 
	* sources/hal/include/led.h (Led_On): gpio changed
	* sources/main.c (CallBack): preventing for changing state while in process added
	(Button_CallBack): cosmetics
	(main): sleeping added.
	
2019-01-09  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/hal/include/gpio.h: Added callback for exti
	* sources/hal/src/gpio.c (Gpio_Init): Added callback for exti
	* sources/main.c (main): Logic changed
	(Exti_Init): Exti added 

2019-01-07  Mykhaylo Shcherbak  <mikl74@yahoo.com>

	* sources/bl/include/main_outputs.h: Prototypes added
	* sources/bl/src/main_outputs.c (Get_State): moved  from led_control 