@@ -25,7 +25,7 @@ static const Gpio_id_t CH_2_Gpio[CH_TOTAL]=
 		[CH_PRIMING_FUEL] 		= GPIO_CH1,
 		[CH_SPARK]				= GPIO_CH2,
 		[CH_SHUNT]				= GPIO_CH3,
-		[CH_OUT4]				= GPIO_CH4,
+		[CH_36V]				= GPIO_CH4,
 		[CH_OUT5]				= GPIO_CH5,
 		[CH_OUT6]				= GPIO_CH6,
 		[CH_OUT7]				= GPIO_CH7
